src/final-package/objects/Asset_2__c.object
<CustomObject>
  <description>Represents hardware devices assigned to employees or departments.</description>
  <label>Device</label>
  <pluralLabel>Devices</pluralLabel>
  <nameField>
    <label>Device Name</label>
    <type>Text</type>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
  <fields>
    <fullName>Device_Serial__c</fullName>
    <label>Device Serial Number</label>
    <type>AutoNumber</type>
    <description>System-generated serial number for internal tracking.</description>
    <displayFormat>DEV-{000000}</displayFormat>
    <startingNumber>1</startingNumber>
  </fields>
  <fields>
    <fullName>Warranty_Check__c</fullName>
    <label>Device Warranty Check</label>
    <description>Determines warranty status based on the device name.</description>
    <formula>IF(CONTAINS(Name, &quot;Refurbished&quot;), &quot;Limited Warranty&quot;, &quot;Full Warranty&quot;)</formula>
    <type>Text</type>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
  </fields>
  <fields>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <description>Indicates if the record is active</description>
    <defaultValue>true</defaultValue>
  </fields>
  <fields>
    <fullName>currency__c</fullName>
    <label>currency</label>
    <type>Currency</type>
    <description>This field stores the transaction currency</description>
    <required>true</required>
    <defaultValue>1234.56</defaultValue>
    <precision>14</precision>
    <scale>4</scale>
  </fields>
  <fields>
    <fullName>date__c</fullName>
    <label>Date</label>
    <type>Date</type>
    <description>This is the main date field for records</description>
    <required>true</required>
    <defaultValue>DATE(2026,1,19)</defaultValue>
  </fields>
  <fields>
    <fullName>date_time__c</fullName>
    <label>Date Time</label>
    <type>DateTime</type>
    <description>This field stores the date and time of the event</description>
    <defaultValue>NOW()</defaultValue>
  </fields>
  <fields>
    <fullName>email__c</fullName>
    <label>Email</label>
    <type>Email</type>
    <description>Primary email address of the contact</description>
    <required>true</required>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
  </fields>
  <fields>
    <fullName>geolocation__c</fullName>
    <label>Geolocation</label>
    <type>Location</type>
    <description>Stores the geolocation coordinates</description>
    <scale>6</scale>
  </fields>
  <fields>
    <fullName>Lookup_Field__c</fullName>
    <label>Kitchen Sink Reference</label>
    <type>Lookup</type>
    <description>This is the description for the lookup field</description>
    <referenceTo>Kitchen_Sink__c</referenceTo>
    <relationshipLabel>Kitchen Sinks</relationshipLabel>
    <relationshipName>Kitchen_Sinks</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
  </fields>
  <fields>
    <fullName>master_detail__c</fullName>
    <label>Master Detail</label>
    <type>MasterDetail</type>
    <description>master detail description</description>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Kitchen Sinks</relationshipLabel>
    <relationshipName>Kitchen_Sinks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
  </fields>
  <fields>
    <fullName>number__c</fullName>
    <label>Number Field</label>
    <type>Number</type>
    <description>number description</description>
    <precision>14</precision>
    <scale>2</scale>
  </fields>
  <fields>
    <fullName>percent__c</fullName>
    <label>Percent Field</label>
    <type>Percent</type>
    <description>percent description</description>
    <precision>14</precision>
    <scale>2</scale>
  </fields>
  <fields>
    <fullName>phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
    <description>Phone number of the contact</description>
  </fields>
  <fields>
    <fullName>picklist__c</fullName>
    <label>Picklist Field</label>
    <type>Picklist</type>
    <description>picklist description</description>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>value 1</fullName>
        </value>
        <value>
          <fullName>value 2</fullName>
        </value>
        <value>
          <fullName>value 3</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>picklist_multi_select__c</fullName>
    <label>Multiselect Picklist</label>
    <type>MultiselectPicklist</type>
    <description>picklist description</description>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>value 1</fullName>
        </value>
        <value>
          <fullName>value 2</fullName>
        </value>
        <value>
          <fullName>value 3</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>text__c</fullName>
    <label>Text Field</label>
    <type>Text</type>
    <description>text description</description>
    <length>20</length>
  </fields>
  <fields>
    <fullName>text_area__c</fullName>
    <label>Text Area Field</label>
    <type>TextArea</type>
    <description>text area description</description>
  </fields>
  <fields>
    <fullName>text_area_encrypted__c</fullName>
    <label>Encrypted Text Area</label>
    <type>EncryptedText</type>
    <description>text area encrypted description</description>
    <length>12</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
  </fields>
  <fields>
    <fullName>text_area_long__c</fullName>
    <label>Long Text Area</label>
    <type>LongTextArea</type>
    <description>text area long description</description>
    <length>32768</length>
  </fields>
  <fields>
    <fullName>text_area_rich__c</fullName>
    <label>Rich Text Area</label>
    <type>Html</type>
    <description>text area rich description</description>
    <length>32768</length>
  </fields>
  <fields>
    <fullName>time__c</fullName>
    <label>Time Field</label>
    <type>Time</type>
    <description>time description</description>
  </fields>
  <fields>
    <fullName>url__c</fullName>
    <label>Website URL</label>
    <type>Url</type>
    <description>url description</description>
  </fields>
  <fields>
    <fullName>rollup_summary__c</fullName>
    <description>roll up summary description</description>
    <inlineHelpText>rollup summary text</inlineHelpText>
    <label>Rollup Summary</label>
    <summarizedField>kitchen_sink_child__c.CreatedDate</summarizedField>
    <summaryForeignKey>kitchen_sink_child__c.Kitchen_Sink__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
  </fields>
</CustomObject>